Enable GitHub Actions
Signed-off-by: Keith Battocchi <kebatt@microsoft.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -44,8 +44,8 @@ install_requires =
 test_suite = econml.tests
 tests_require =
     pytest
-    pytest-xdist < 2.0.0
-    pytest-cov < 3.0.0
+    pytest-xdist
+    pytest-cov
 
 [options.extras_require]
 automl =
