--- a/.github/workflows/publish-documentation.yml
+++ b/.github/workflows/publish-documentation.yml
@@ -64,29 +64,29 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
-        name: Checkout repository
+      - name: Checkout repository
+        uses: actions/checkout@v4
         with:
           ref: ${{ inputs.ref }}
-      - uses: actions/setup-python@v5
-        name: Setup Python
+      - name: Setup Python
+        uses: actions/setup-python@v5
         with:
           python-version: 3.8 # because of our supported TensorFlow versions, must build on 3.6-3.8
-      - run: python -m pip install --upgrade pip && pip install --upgrade setuptools
-        name: Ensure latest pip and setuptools
-      - run: pip install -e .[all] ${{ inputs.use_lkg && '-r lkg.txt' || '' }}
-        name: Install econml[all]
-      - run: sudo apt-get -yq install graphviz
-        name: Install graphviz
-      - run: pip install "sphinx~=4.4.0" "sphinx_rtd_theme~=1.0.0" && python setup.py build_sphinx -W
-        name: Build documentation
-      - uses: actions/upload-artifact@v3
-        name: Upload docs as artifact
+      - name: Ensure latest pip and setuptools
+        run: python -m pip install --upgrade pip && pip install --upgrade setuptools
+      - name: Install econml[all]
+        run: pip install -e .[all] ${{ inputs.use_lkg && '-r lkg.txt' || '' }}
+      - name: Install graphviz
+        run: sudo apt-get -yq install graphviz
+      - name: Build documentation
+        run: pip install "sphinx~=4.4.0" "sphinx_rtd_theme~=1.0.0" && python setup.py build_sphinx -W
+      - name: Upload docs as artifact
+        uses: actions/upload-artifact@v3
         with:
           name: docs
           path: build/sphinx/html/
-      - run: python setup.py build_sphinx -b doctest
-        name: Run doctests
+      - name: Run doctests
+        run: python setup.py build_sphinx -b doctest
         if : ${{ inputs.run_doctests }}
         
   publish-docs:
@@ -97,24 +97,24 @@ jobs:
       id-token: write # needed to publish to Azure
     if: ${{ inputs.publish }}
     steps:
-      - uses: actions/download-artifact@v3
-        name: Download docs artifact
+      - name: Download docs artifact
+        uses: actions/download-artifact@v3
         with:
           name: docs
           path: html
-      - run: |-
+      - name: Zip docs for publishing
+        run: |-
           pushd html
           zip -r docs.zip *
           popd
-        name: Zip docs for publishing
-      - uses: azure/login@v1
-        name: Login to Azure
+      - name: Login to Azure
+        uses: azure/login@v1
         with:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-      - uses: azure/webapps-deploy@v2
-        name: Deploy documentation to Azure web app
+      - name: Deploy documentation to Azure web app
+        uses: azure/webapps-deploy@v2
         with:
           app-name: ${{ inputs.environment == 'prod' && 'econml' || 'econml-dev' }}
           package: html/docs.zip
