--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -58,23 +58,23 @@ jobs:
       fail-fast: false
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v4
-        name: Checkout repository
+      - name: Checkout repository
+        uses: actions/checkout@v4
         with:
           ref: ${{ inputs.ref }}
-      - uses: actions/setup-python@v5
-        name: Setup Python
+      - name: Setup Python
+        uses: actions/setup-python@v5
         with:
           python-version: 3.9
-      - run: python -m pip install --upgrade pip && pip install --upgrade setuptools
-        name: Ensure latest pip and setuptools
-      - run: pip install cibuildwheel && python -m cibuildwheel --output-dir dist
-        name: Build wheels
+      - name: Ensure latest pip and setuptools
+        run: python -m pip install --upgrade pip && pip install --upgrade setuptools
+      - name: Build wheels
+        run: pip install cibuildwheel && python -m cibuildwheel --output-dir dist
         env:
           CIBW_BUILD: cp3*
           CIBW_SKIP: "*musl* *win32 *i686"
-      - uses: actions/upload-artifact@v3
-        name: Upload wheels as artifact
+      - name: Upload wheels as artifact
+        uses: actions/upload-artifact@v3
         with:
           name: dist
           path: dist/
@@ -82,22 +82,22 @@ jobs:
     name: Build sdist
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-        name: Checkout repository
+      - name: Checkout repository
+        uses: actions/checkout@v4
         with:
           ref: ${{ inputs.ref }}
-      - uses: actions/setup-python@v5
-        name: Setup Python
+      - name: Setup Python
+        uses: actions/setup-python@v5
         with:
           python-version: 3.8 # because of our supported TensorFlow versions, must build on 3.6-3.8
-      - run: python -m pip install --upgrade pip && pip install --upgrade setuptools
-        name: Ensure latest pip and setuptools
-      - run: pip install -e .[all] ${{ inputs.use_lkg && '-r lkg.txt' || '' }}
-        name: Install econml[all]
-      - run: python setup.py sdist
-        name: Build sdist
-      - uses: actions/upload-artifact@v3
-        name: Upload sdist as artifact
+      - name: Ensure latest pip and setuptools
+        run: python -m pip install --upgrade pip && pip install --upgrade setuptools
+      - name: Install econml[all]
+        run: pip install -e .[all] ${{ inputs.use_lkg && '-r lkg.txt' || '' }}
+      - name: Build sdist
+        run: python setup.py sdist
+      - name: Upload sdist as artifact
+        uses: actions/upload-artifact@v3
         with:
           name: dist
           path: dist/
@@ -106,21 +106,21 @@ jobs:
     needs: [build_wheels, build_sdist]
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/setup-python@v5
-        name: Setup Python
+      - name: Setup Python
+        uses: actions/setup-python@v5
         with:
           python-version: 3.9
-      - run: python -m pip install --upgrade pip && pip install --upgrade setuptools
-        name: Ensure latest pip and setuptools
-      - run: pip install twine
-        name: Install twine
-      - uses: actions/download-artifact@v3
-        name: Download wheels and sdist
+      - name: Ensure latest pip and setuptools
+        run: python -m pip install --upgrade pip && pip install --upgrade setuptools
+      - name: Install twine
+        run: pip install twine
+      - name: Download wheels and sdist
+        uses: actions/download-artifact@v3
         with:
           name: dist
           path: dist/
-      - run: twine upload dist/*
-        name: Upload wheels and sdist to package index
+      - name: Upload wheels and sdist to package index
+        run: twine upload dist/*
         env:
           TWINE_USERNAME: __token__
           TWINE_REPOSITORY: ${{ inputs.repository }}
