--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,7 +58,8 @@ plt = [
     "matplotlib"
 ]
 dowhy = [
-    "dowhy < 0.11"
+    # when updating this, also update the version check in dowhy.py
+    "dowhy < 0.12"
 ]
 ray = [
     "ray > 2.2.0"
@@ -76,7 +77,7 @@ all = [
     "numpy < 1.24",
     "graphviz",
     "matplotlib",
-    "dowhy < 0.11",
+    "dowhy < 0.12",
     "ray > 2.2.0"
 ]
 
